Changelog
=========

7.9.dev0 - (unreleased)
-----------------------

7.8 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

7.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

7.6 - (2016-12-28)
------------------
* Change: removed condition which states that media link must be from ftp.eea
  and show folder url also for anonymous from report.pt
  [ichim-david refs #79977]

7.5 - (2016-08-29)
------------------
* Feature: Show Files no matter if there are Document/Page in root
  [catalin refs #75197]

7.4 - (2016-08-03)
------------------
* Feature: Display message if there is no printed edition
  [catalin refs #73796]

7.3 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

7.2 - (2016-05-04)
------------------
* Bug fix: Fix tests dependency to eea.rdfmarshaller
  [avoinea]

7.1 - (2016-02-15)
------------------
* Bug fix: Fixed an issue with the EUBookshop link
  which returned wrong books if the report was yet not
  registered in EUBookshop.
  [demarant refs #69230]
* Change: removed the "sales agent link" and simplified view by
  removing the unnecessary "published by"
  [demarant refs #68719]

7.0 - (2015-09-10)
------------------
* Change: removed jquery browser call and documented the use of Reports.Tree
  functionality and usage
  [ichimdav refs #27220]
* Change: Refactoring PDF utilities - moved to eea.converter and drop pdftk and
  pdfinfo/xpdf dependency
  [voineali refs #28522]
* Change: cleaned report.css of unused css
  [ichimdav refs #27220]

6.3 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

6.2 - (2015-05-15)
------------------
* Change: removed Tracking of file downloaded with Google Analytics,
  this feature has been enhanced as is now part of eea.design