@@ -3,6 +3,8 @@ Changelog
 
 7.9.dev0 - (unreleased)
 -----------------------
+* Change: fixed PyLint warnings and errors
+  [valipod refs #84949]
 
 7.8 - (2017-05-15)
 ------------------
